Restoration back to config tailwind

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="/OB_intro_art_works/manifest.json" />
-    <title>React App</title>
+    <title>《 ○안에서 반✦》 카드뽑기</title>
     <script
       defer="defer"
       src="/OB_intro_art_works/static/js/main.1fca4377.js"
