--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="/OB_intro_art_works/manifest.json" />
+    <link rel="icon" href="http://example.com/favicon.png" />
     <title>《 ○안에서 반✦》 카드뽑기</title>
     <script
       defer="defer"
@@ -17,6 +18,11 @@
     <link
       href="/OB_intro_art_works/static/css/main.c8e1ccfd.css"
       rel="stylesheet"
+    />
+    <link
+      rel="prefetch"
+      as="video/mp4"
+      href="/OB_intro_art_works/src/loading.mp4"
     />
   </head>
   <body>
