--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="manifest" href="/OB_intro_art_works/manifest.json" />
-    <link rel="icon" href="http://example.com/favicon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <title>《 ○안에서 반✦》 카드뽑기</title>
     <script
       defer="defer"
-      src="/OB_intro_art_works/static/js/main.1fca4377.js"
+      src="%PUBLIC_URL%/static/js/main.1fca4377.js"
     ></script>
-    <link
-      href="/OB_intro_art_works/static/css/main.c8e1ccfd.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="prefetch"
-      as="video/mp4"
-      href="/OB_intro_art_works/src/loading.mp4"
-    />
+    <link href="%PUBLIC_URL%/static/css/main.c8e1ccfd.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
