--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <meta name="og:title" content="《 ○안에서 반✦》 카드뽑기" />
+    <meta name="og:image" content="%PUBLIC_URL%/meta_thumbnail.jpg" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <title>《 ○안에서 반✦》 카드뽑기</title>
